# greatwalk-bot

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  config.example.yaml  config.test-lake-waikaremoana.yaml  operations.md  pyproject.toml
deploy/: greatwalk-bot.service  greatwalkbot.service
docs/: api.md  bookings.md  deployment.md  first-run.md  itinerary-availability.md  operations.md  reverse_engineering.md  runtime-state.md  telegram.md  trip-fit.md
examples/: nz-honeymoon-2026.yaml
scripts/: capture_gw_facility.py  fetch_api_samples.py  investigate_greatwalk_availability.py  investigate_milford.py  investigate_milford_grid.py  investigate_milford_select.py  investigate_network.py  investigate_search_nav.py  probe_gw_form_controls.py  probe_gw_post.py  save_full_samples.py  test_date_range.py
tests/: debug_search_helpers.py  support.py  test_browser_recovery.py  test_capture_correctness.py  test_cli_status.py  test_config.py  test_config_safety.py  test_confirmed_bookings.py  test_dedupe.py  test_display.py  test_domain.py  test_durations.py  test_evaluation_logging.py  test_failure_injection.py  test_form_controls.py  test_gw_active_form.py  test_gw_desktop_click.py  test_gw_desktop_date_picker.py  test_gw_desktop_date_picker_popup.py  test_gw_desktop_form.py  test_gw_desktop_form_idempotent.py  test_gw_desktop_nights_dropdown.py  test_gw_desktop_people_dropdown.py  test_gw_dom_discovery.py  test_itinerary_validation.py  test_matcher.py  test_metrics.py  test_notification_config.py  test_notify_test_cli.py  test_parsing.py  test_persistent_dedupe.py  (+14 more)
(+84 files in other folders)
