[project]
name = "greatwalkbot"
version = "0.1.0"
description = "Open-source assistant for monitoring NZ DOC Great Walk availability"
readme = "README.md"
authors = [
    { name = "rreiter", email = "rreiter@nvidia.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
gwbot = "greatwalkbot.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
